# cmake-juce-init

./: CMakeLists.txt
cmake/: CPM.cmake
plugin/: CMakeLists.txt
plugin/source/: PluginEditor.cpp
